# cryptid_game

./: Cargo.toml
assets/meshes/: bar.mtl  cube.glb  floor.glb  floor.gltf
assets/meshes/dev_playground/: floor.gltf
assets/props/can_1/mesh/: mesh.glb  mesh.gltf
assets/props/plastic_bin_1/mesh/: mesh.glb  mesh.glb.gltf
assets/scenes/dev_playground/: mesh.glb
assets/scenes/dev_playground/metal_grate_floor/mesh/: mesh.glb  stainless_steel_floor.glb
assets/scenes/dev_playground/nav_mesh/: nav_mesh.glb
assets/scenes/dev_playground/room_shadow_caster/mesh/: mesh.glb
assets/scenes/dev_playground/stainless_steel_floor/mesh/: mesh.glb  stainless_steel_floor.glb  stainless_steel_floor.mtl
assets/scenes/dev_playground/table_1/mesh/: mesh.glb
assets/scenes/dev_playground/wall_1/mesh/: mesh.glb
assets/scenes/dev_playground/wall_2/mesh/: mesh.glb
assets/scenes/dev_playground/wall_3/mesh/: mesh.glb
assets/shaders/: floor.wgsl  plastic.wgsl  shadow_caster.wgsl  wall.wgsl  window.wgsl
blender/: sprite_map_gen.py  white_noise_gen.py
blender/metal_floor_tile_set/: metal_floor_tile_set.blend  metal_floor_tile_set.blend1
blender/metal_floor_tile_set/uv/: textures.pdn  textures_2.pdn  textures_3.pdn
src/: ik.rs  lightning.rs  main.rs  player.rs  rain.rs  standard_material.rs
src/humanoid/: mod.rs
src/player/: controller.rs  create.rs  follow.rs  ik.rs  mod.rs  movement.rs  target.rs
src/scene/: floor.rs  mod.rs  nav_mesh.rs  shadow_caster.rs  wall.rs
src/scene/prop/: mod.rs  sound_source.rs
src/scene/prop/materials/: mod.rs  plastic.rs
(+2 files in other folders)
